# uygulamalarla_ros

./: README.md
building_editor_models/labirent/: model.config  model.sdf
devriye_gezme/: CMakeLists.txt  package.xml
devriye_gezme/launch/: devriye_paket.launch
devriye_gezme/params/: devriye_parametre.yaml
devriye_gezme/scripts/: devriye.py
egitim_robotu_description/: package.xml
egitim_robotu_description/urdf/: egitim_robotu_diferansiyel.xacro  egitim_robotu_govde.xacro  egitim_robotu_kamera.xacro  egitim_robotu_lazer.xacro  egitim_robotu_taban.xacro  egitim_robotu_tekerlek.xacro  inertia_tensors.xacro
egitim_robotu_gazebo/: CMakeLists.txt  frames.gv  package.xml
egitim_robotu_gazebo/launch/: egitim_robotu_gazebo.launch
engel_foto/: CMakeLists.txt  package.xml
engel_foto/scripts/: engel_algila_foto_cek.py
hedefe_git/: CMakeLists.txt  package.xml
hedefe_git/launch/: hedefe_git.launch
hedefe_git/scripts/: hedef_noktaya_gitme.py  hedefe_gitme_basit.py  varis_durum.py
hedefe_git/srv/: VarisDurum.srv
labirent_dunya/: CMakeLists.txt  package.xml
labirent_dunya/launch/: labirent_dunya.launch
labirent_dunya/worlds/: labirent_ortam.world
ogretici_paket/: CMakeLists.txt  package.xml
ogretici_paket/bagfiles/: 2020-05-12-18-12-26.bag
ogretici_paket/launch/: turtle.launch
ogretici_paket/scripts/: batarya_abone.py  batarya_yayinci.py  zaman_client.py  zaman_server.py
ogretici_paket/src/: ilk_kod.cpp
ogretici_paket/srv/: GecenZaman.srv
slam_ve_navigasyon/: CMakeLists.txt  package.xml
slam_ve_navigasyon/map/: labirent_ortam_harita.pgm  labirent_ortam_harita.yaml
slam_ve_navigasyon/scripts/: hedef_gonder.py
