<?xml version="1.0"?>
<package format="2">
  <name>hedefe_git</name>
  <version>0.0.0</version>
  <description>The hedefe_git package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="robotik@todo.todo">robotik</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>
  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
